--- a/_posts/2024-07-15-jjoo2024.md
+++ b/_posts/2024-07-15-jjoo2024.md
@@ -15,12 +15,6 @@ The day started early at 5 a.m. since our flight was at 8 a.m. After almost thre
 
 Our tennis match was scheduled for 11:30 a.m., so we didn’t have time to explore Paris right away. We went directly from the airport to Roland Garros.
 
-<div class="row mt-3">
-    <div class="col-12">
-        {% include figure.liquid loading="eager" path="assets/img/jjoo/tenis.jpg" class="img-fluid rounded z-depth-1" %}
-    </div>
-</div>
-
 We enjoyed two doubles tennis matches. The first match was between Italians Jasmine Paolini and Sara Errani, who won against Czech players Linda Noskova and Karolina Muchova, with a score of 6-3, 6-2. The second match featured Australians John Peers and Matthew Ebden, who defeated Americans Tommy Paul and Taylor Fritz, 7-5, 6-2. During the matches, we ate some sandwiches we had brought from Málaga. It was thrilling to see the Rafael Nadal sculpture, honoring the greatest player in Roland Garros history.
 
 <div class="row mt-3">
@@ -32,19 +26,23 @@ We enjoyed two doubles tennis matches. The first match was between Italians Jasm
 Afterward, we took an Uber to the volleyball match. It was incredible! France was playing against Estonia, two of the top teams in the tournament. Since the Olympic Games were held in Paris, there were many passionate fans supporting France. The atmosphere was electric!
 
 <div class="row mt-3">
-    <div class="col-12">
-        {% include figure.liquid loading="eager" path="assets/img/jjoo/volleyball.jpg" class="img-fluid rounded z-depth-1" %}
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/jjoo/volleyball.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/jjoo/tenis.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
+
 
 We had about 10 hours, from 8 p.m. to 6 a.m. the next day, to explore Paris. Since we didn’t book a hotel, we decided to discover the city by night. We started by visiting the famous Red Light District, where we saw the iconic windmill. Next, we headed to the city center, where we marveled at the Eiffel Tower and the Arc de Triomphe. We were walking past midnight, so the streets were quiet, and it felt like we had the city all to ourselves.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/torre.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/img/jjoo/torre.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/louvre.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/img/jjoo/louvre.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
 
