--- a/_posts/2024-07-15-jjoo2024.md
+++ b/_posts/2024-07-15-jjoo2024.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: A day on the Paris Olympic Games.
+title: A day at the Paris Olympic Games.
 date: 2024-07-15 16:15:00
 description: My friends and I attended the 2024 Olympic Games in Paris, where we enjoyed tennis and volleyball matches, and later explored the city at night. It was an exciting experience full of sports and adventure.
 tag: travel
